# dicom_anno

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dicom_files/: README.md
docs/: api-reference.md  cli-reference.md  compliance.md  configuration.md  installation.md
docs/examples/: README.md  basic_anonymization.py  batch_processing.py  custom_preset.yaml
scripts/: install.sh  launcher.command.template
src/dicom_anonymizer/: __init__.py  __main__.py
src/dicom_anonymizer/cli/: __init__.py  console.py  main.py
src/dicom_anonymizer/cli/commands/: __init__.py  anonymize.py  presets.py  report.py  validate.py  version.py
src/dicom_anonymizer/config/: __init__.py  defaults.py  loader.py  models.py
src/dicom_anonymizer/engine/: __init__.py  actions.py  date_shifter.py  processor.py  statistics.py  uid_mapper.py
src/dicom_anonymizer/presets/: __init__.py  full_anonymization.yaml
src/dicom_anonymizer/reports/: __init__.py  csv_report.py  generator.py  json_report.py  models.py  pdf_report.py
src/dicom_anonymizer/reports/assets/: __init__.py
src/thakaamed_dicom/: __init__.py  __main__.py
src/thakaamed_dicom/cli/: __init__.py  console.py  main.py
src/thakaamed_dicom/cli/commands/: __init__.py  anonymize.py  presets.py  report.py  validate.py  version.py
src/thakaamed_dicom/config/: __init__.py  defaults.py  loader.py  models.py
src/thakaamed_dicom/engine/: __init__.py  actions.py  date_shifter.py  processor.py  statistics.py  uid_mapper.py
src/thakaamed_dicom/gui/: __init__.py  app.py  components.py  styles.py
src/thakaamed_dicom/presets/: __init__.py  full_anonymization.yaml  research.yaml  sfda_safe_harbor.yaml
src/thakaamed_dicom/reports/: __init__.py  csv_report.py  generator.py  json_report.py  models.py  pdf_report.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  dicom_factory.py
tests/test_cli/: __init__.py  test_anonymize.py  test_main.py  test_presets.py  test_report.py  test_validate.py  test_version.py
tests/test_compliance/: __init__.py  test_dicom_ps315.py  test_hipaa_safe_harbor.py
tests/test_config/: __init__.py  test_loader.py  test_models.py
tests/test_engine/: __init__.py  conftest.py  test_actions.py  test_date_shifter.py  test_processor.py  test_uid_mapper.py
tests/test_integration/: test_full_workflow.py
tests/test_reports/: __init__.py  conftest.py  test_csv_report.py  test_generator.py  test_json_report.py  test_pdf_report.py
