[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dicom_anonymizer"
version = "1.0.1"
description = "Professional DICOM medical imaging de-identification tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "THAKAAMED AI", email = "info@thakaamed.com" }
]
maintainers = [
    { name = "THAKAAMED AI", email = "dev@thakaamed.com" }
]
keywords = [
    "dicom",
    "anonymization",
    "de-identification",
    "medical-imaging",
    "healthcare",
    "hipaa",
    "gdpr",
    "pdpl",
    "saudi-arabia",
    "vision-2030"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pydicom>=2.4",
    "reportlab>=4.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML",
    "build",
    "twine",
]

[project.scripts]
dicom-anonym = "dicom_anonymizer.cli.main:main"

[project.urls]
Homepage = "https://github.com/thakaamed/dicom-anonymizer"
Documentation = "https://thakaamed.github.io/dicom-anonymizer"
Repository = "https://github.com/thakaamed/dicom-anonymizer"

[tool.hatch.build.targets.wheel]
packages = ["src/dicom_anonymizer"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src/dicom_anonymizer/**/*.py",
    "src/dicom_anonymizer/**/*.yaml",
    "src/dicom_anonymizer/**/*.png",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for Click)
]

[tool.ruff.lint.isort]
known-first-party = ["dicom_anonymizer"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/dicom_anonymizer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
